--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,13 +23,6 @@
 body {
   font-family: 'Source Sans Pro', sans-serif;
   margin: 0;
-  background-color: var(--background-color);
-  color: var(--font-color);
-  transition: background-color 0.2s ease, color 0.2s ease;
-  -webkit-transition: background-color 0.2s ease, color 0.2s ease;
-  -moz-transition: background-color 0.2s ease, color 0.2s ease;
-  -ms-transition: background-color 0.2s ease, color 0.2s ease;
-  -o-transition: background-color 0.2s ease, color 0.2s ease;
 }
 
 h1 {
